[package]
name = "mqtt-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master"}

[[bin]]
name = "sub"
path = "src/sub/main.rs"


[[bin]]
name = "pub"
path = "src/pub/main.rs"